--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,12 +10,12 @@
 
 <body>
 
-  {{!-- informacion que vaya en el layout esta visible en todas las paginas --}}
+
   <nav>
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href=" /beers">Lessons</a>
-    <a href="/random-beer">Approved Lessons</a>
+    <a href=" /beers">Beers</a>
+    <a href="/random-beer">Random Beer</a>
  
   </nav>
 
