--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,9 @@
 <div class="d-flex flex-column image2">
-   {{!-- <img src="./images/beer.png" alt="Beer image" style="max-width:400px">
-    <a href="/beers" class="btnBeer">Check the Beers!</a>
-    <a href="/random-beer" class="btnBeer">Check a Random Beer</a>
---}}
-<h1>HOME</h1>
+ 
+  <img src="./images/beer.png" alt="Beer image" style="max-width:400px">
+    <a href="/beers" >Check the Beers!</a>
+    <a href="/random-beer" >Check a Random Beer</a>
+
+
 
 </div>
