--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,10 +1,8 @@
+<link rel="stylesheet" href="/stylesheets/styles.css">
+<div class="flex">
 {{#each beersFromApi}}
-{{!-- for(this of breeds) --}}
 
-<img src="{{this.image_url}}" alt="beer" width="100px">
-<h3> {{this.name}}</h3>
-<p> {{this.description}}</p>
-<p> {{this.tagline}}</p>
-<p> {{this.food_pairing}}</p>
-<p> {{this.brewers_tips}}</p>
+{{>beerpartial this}}
+
 {{/each}}
+</div>
