--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -8,4 +8,11 @@ font-family: Arial, Helvetica, sans-serif;
 #main-random{
     display:flex;
     flex-direction: row;
+    padding :5px;
+}
+.flex{
+    display: flex;
+    flex-direction: row;
+    width: 1200px;
+    flex-wrap: wrap;
 }
