--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,22 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
+  <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 
 <body>
 
+    <div id="nav">
 
-  <nav>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href=" /beers">Beers</a>
-    <a href="/random-beer">Random Beer</a>
- 
-  </nav>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href=" /beers">Beers</a>
+      <a href="/random-beer">Random Beer</a>
+
+    </div>
+
+
 
   {{{body}}}
 
-  
+
 
 </body>
 
