--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -16,3 +16,22 @@ font-family: Arial, Helvetica, sans-serif;
     width: 1200px;
     flex-wrap: wrap;
 }
+.description{
+    width: 200px;
+    margin: 20px;
+    align-items: stretch;
+
+
+}
+#nav{height: 30px;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(223, 223, 252);
+    color:white;
+    padding: 50px;
+
+}
+
+a{
+    margin: 10px;
+}
