--- a/views/partials/beerpartial.hbs
+++ b/views/partials/beerpartial.hbs
@@ -1,11 +1,14 @@
+<link rel="stylesheet" href="/stylesheets/styles.css">
 <div>
-    <img src="{{this.image_url}}" alt="beer" width="100px">
-</div>
-<div>
-    <p> {{this.name}}</p>
-    <br>
-    <p> {{this.description}}</p>
-    <br>
-    <p> {{this.tagline}}</p>
-    <br>
+    <div>
+        <img src="{{this.image_url}}" alt="beer" width="60px" height="200px">
+    </div>
+    <div class="description">
+        <h4> {{this.name}}</h4>
+        <br>
+        <p> {{this.description}}</p>
+        <br>
+        <p> {{this.tagline}}</p>
+        <br>
+    </div>
 </div>
