--- a/views/partials/beerpartial.hbs
+++ b/views/partials/beerpartial.hbs
@@ -4,7 +4,9 @@
         <img src="{{this.image_url}}" alt="beer" width="60px" height="200px">
     </div>
     <div class="description">
-        <h4> {{this.name}}</h4>
+    
+      <a href="/details?id={{this.id}}"><h4> {{this.name}}</h4></a>
+    
         <br>
         <p> {{this.description}}</p>
         <br>
